adicionei imagem, mudei a cor da pagina e alterei os icones

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="refresh" content="2" />
+    <meta http-equiv="refresh" content="99999999999999999" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="style.css" media="screen" />
@@ -25,17 +25,28 @@
         <a
           target="blank"
           href="https://www.linkedin.com/in/sarah-belisario-3b49a413b/"
-          ><div class="caixa"><img src="img/icons/linkedin.png" alt="" /></div
+          ><div class="caixa" title="Linkedin">
+            <img src="img/icons/linkedin.png" alt="linkedin" /></div
         ></a>
         <a
           target="blank"
           href="https://api.whatsapp.com/send?phone=5532988212213&text=Me contrata por favor?"
-          ><div class="caixa"><img src="img/icons/whatsapp.png" alt="" /></div
+          ><div class="caixa" title="Whatsapp">
+            <img src="img/icons/whatsapp.png" alt="whatsapp" /></div
         ></a>
         <a target="blank" href="https://github.com/SarahBelisario"
-          ><div class="caixa"><img src="img/icons/github.png" alt="" /></div
+          ><div class="caixa" title="Github">
+            <img src="img/icons/github.png" alt="github" /></div
+        ></a>
+        <a
+          class="download"
+          target="blank"
+          href="https://download1980.mediafire.com/8j1rdo4zt1yg/1z9zuvrywqasqy5/_Curr%C3%ADculo.pdf"
+          ><div title="Download">
+            <img src="img/icons/download.png" alt="Download" /></div
         ></a>
       </div>
+
       <div class="texto">
         <h1 class="titulo">
           Sarah <br />
@@ -49,7 +60,9 @@
         </p>
       </div>
 
-      <div></div>
+      <div class="personagem">
+        <img src="img/static/personagem.png" alt="" />
+      </div>
     </div>
   </body>
 </html>
