correcao de bug de links de abrir paginas

--- a/index.html
+++ b/index.html
@@ -23,24 +23,24 @@
     <div class="background">
       <div class="redesocial">
         <a
-          target="blank"
+          target="_blank"
           href="https://www.linkedin.com/in/sarah-belisario-3b49a413b/"
           ><div class="caixa" title="Linkedin">
             <img src="img/icons/linkedin.png" alt="linkedin" /></div
         ></a>
         <a
-          target="blank"
+          target="_blank"
           href="https://api.whatsapp.com/send?phone=5532988212213&text=Me contrata por favor?"
           ><div class="caixa" title="Whatsapp">
             <img src="img/icons/whatsapp.png" alt="whatsapp" /></div
         ></a>
-        <a target="blank" href="https://github.com/SarahBelisario"
+        <a target="_blank" href="https://github.com/SarahBelisario"
           ><div class="caixa" title="Github">
             <img src="img/icons/github.png" alt="github" /></div
         ></a>
         <a
           class="download"
-          target="blank"
+          target="_blank"
           href="https://download1980.mediafire.com/8j1rdo4zt1yg/1z9zuvrywqasqy5/_Curr%C3%ADculo.pdf"
           ><div title="Download">
             <img src="img/icons/download.png" alt="Download" /></div
