adicionei foto e adc botao para email

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="refresh" content="99999999999999999" />
+    <meta http-equiv="refresh" content="3s" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="style.css" media="screen" />
@@ -38,6 +38,10 @@
           ><div class="caixa" title="Github">
             <img src="img/icons/github.png" alt="github" /></div
         ></a>
+        <a href="mailto:sarahhaide89@gmail.com"
+          ><div class="caixa" title="Email">
+            <img src="img/icons/gmail.png" alt="Email" /></div
+        ></a>
         <a
           class="download"
           target="_blank"
@@ -60,8 +64,8 @@
         </p>
       </div>
 
-      <div class="personagem">
-        <img src="img/static/personagem.png" alt="" />
+      <div class="eu-sarah">
+        <img src="img/static/sarah.png" alt="" />
       </div>
     </div>
   </body>
